@@ -1,3 +1,5 @@
+* Thu Jan 01 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.3
+* Python 2.5 compatibility fixes
 * Thu Jan 01 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.2
 * first official modRana release for Android! :)
 * make theme parsing more robust
